main/default/objects/Quick_Check_Response__c/Quick_Check_Response__c.object-meta.xml
<CustomObject>
    <description>Quick Check Response</description>
    <label>Quick Check Response</label>
    <nameField>
        <displayFormat>QCR{000000}</displayFormat>
        <label>Quick Check Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Check Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>