main/default/objects/Quick_Check_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quick Check Responses</relationshipLabel>
    <relationshipName>Quick_Check_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>