main/default/objects/Quick_Check_Response__c/fields/Participant_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Milestone</label>
    <referenceTo>Participant_Milestone__c</referenceTo>
    <relationshipLabel>Quick Check Responses</relationshipLabel>
    <relationshipName>Quick_Check_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>