main/default/objects/Quick_Check_Response__c/fields/Quick_Check__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Quick Check</description>
    <label>Quick Check</label>
    <referenceTo>Quick_Check__c</referenceTo>
    <relationshipLabel>Quick Check Responses</relationshipLabel>
    <relationshipName>Quick_Check_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>